# numpy

./: .gitmodules  doc_requirements.txt  pyproject.toml  test_requirements.txt
.github/workflows/: build_test.yml  cygwin.yml  emscripten.yml  free-threaded-wheels.yml  gitpod.yml  linux.yml  linux_meson.yml  linux_musl.yml  macos.yml  mypy.yml  wheels.yml  windows.yml  windows_meson.yml
doc/neps/: nep-0047-array-api-standard.rst
doc/source/dev/: development_environment.rst
doc/source/release/: 1.26.0-notes.rst
doc/source/user/: building.rst
numpy/: __init__.py  meson.build
numpy/_core/src/npysort/: selection.cpp
numpy/_core/src/umath/: loops_arithm_fp.dispatch.c.src  special_integer_comparisons.cpp
numpy/core/: config.h.in  meson.build  setup.py
numpy/core/src/common/lapack/: accelerate_legacy.h  accelerate_wrapper.c  accelerate_wrapper_cblas.c
numpy/linalg/: meson.build  setup.py  umath_linalg.cpp
numpy/ma/: core.py
numpy/tests/: test_ctypeslib.py  test_public_api.py
numpy/typing/tests/: test_isfile.py
tools/: check_installed_files.py
tools/wheels/: cibw_before_build.sh  cibw_test_command.sh
